--- a/src/main/java/pl/itcrowd/pom_sorter/ui/SettingsForm.form
+++ b/src/main/java/pl/itcrowd/pom_sorter/ui/SettingsForm.form
@@ -11,7 +11,7 @@
       <grid id="5237c" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -91,7 +91,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <icon value="actions/addBig.png"/>
+                  <icon value="general/add.png"/>
                   <text value=""/>
                   <toolTipText value="Add"/>
                 </properties>
@@ -106,7 +106,7 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <icon value="actions/removeBig.png"/>
+                  <icon value="general/remove.png"/>
                   <text value=""/>
                   <toolTipText value="Remove"/>
                 </properties>
@@ -116,7 +116,7 @@
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <icon value="actions/upBig.png"/>
+                  <icon value="actions/moveUp.png"/>
                   <text value=""/>
                   <toolTipText value="Up"/>
                 </properties>
@@ -126,7 +126,7 @@
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <icon value="actions/downBig.png"/>
+                  <icon value="actions/moveDown.png"/>
                   <text value=""/>
                   <toolTipText value="Down"/>
                 </properties>
@@ -171,7 +171,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="actions/addBig.png"/>
+              <icon value="general/add.png"/>
               <text value=""/>
               <toolTipText value="Add"/>
             </properties>
@@ -181,7 +181,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="actions/removeBig.png"/>
+              <icon value="general/remove.png"/>
               <text value=""/>
               <toolTipText value="Remove"/>
             </properties>
