--- a/src/main/java/pl/itcrowd/pom_sorter/ui/SettingsForm.form
+++ b/src/main/java/pl/itcrowd/pom_sorter/ui/SettingsForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootComponent" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="417"/>
+      <xy x="20" y="20" width="500" height="419"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -225,7 +225,7 @@
           </vspacer>
         </children>
       </grid>
-      <grid id="dab6" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="dab6" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -247,6 +247,16 @@
             </constraints>
             <properties>
               <model/>
+            </properties>
+          </component>
+          <component id="bd6b7" class="javax.swing.JButton" binding="restoreDefaultsButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <maximum-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="Restore defaults"/>
             </properties>
           </component>
         </children>
